[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Weapon/Weapon.gd" type="Script" id=2]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="Weapon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ProjectileSpawn" type="Position2D" parent="."]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
